3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

server/commands.c: Disable 'possess', that crashes server.
server/monster.c: Make monsters use wands/horns/... again. Also make'em
   ignore DMs all the time (even when not invisible).
server/skill_util.c: Fix the change_skill when called for monsters.
Ryo 2004-06-06

server/c_misc.c: Add sum_weight() call to fix_me command so that players
  weight is properly recalculated.
server/skills.c: Fix up attempt_steal() so that it doesn't improperly
  remove object from target when person doing the stealing can't pick
  it up.
server/spell_attack.c: Set maxhp properly, so multipled fireballs, etc
  can be going off at the same time.
server/spell_effect.c: Fix up cast_create_missile() so more esoteric
  missiles can be created.
MSW 2004-05-31

include/sproto.h: new 'dmhide' command.
server/commands.c: new 'dmhide' command.
server/c_wiz.c: added 'dmhide' command. Player becomes DM, and 'hide's immediately. Others
   only see him/her leave the game, they don't know s/he's DM.
Ryo 2004-05-24

include/book.h: Increase the size of BOOK_BUF, so inscribed books can hold
  more informatin.
lib/Makefile.am, lib/Makefile.in: Add the 'rename' to the list of help
   files.
lib/archetypes: update the glyph/rune spells to have proper face.
lib/bmaps, lib/crossfire.* - add glyph.111 image.
server/gods.c: Modify tailor_god_spell() to look harder to find a god -
  necessary for glyph spells.
server/spell_attack.c: Give players 50% of exp for monsters they charm.
MSW 2004-05-19

common/object.c: Correct get_search_arr() to return a proper permutation.
Andreas Kirschbaum 2004-05-18
